--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+
+    }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.wrapper {
+    @apply mx-auto md:px-5 xl:max-w-screen-xl lg:max-w-screen-lg md:max-w-screen-md max-sm:px-4
+}
+@media not all and (min-width: 740px) {
+    .max-sm\:px-4 {
+        padding-left: 1rem/* 16px */;
+        padding-right: 1rem/* 16px */;
+    }
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@media (min-device-pixel-ratio: 1.5) {
+    html, body {
+        font-size: 24px;
+    }
 }
+
+
+    
+
+
+
+
