--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-
+h1 {
+    @apply text-4xl mb-12 ml-16
+}
+h2 {
+   @apply text-2xl mb-8
+}
+h3 {
+    @apply text-2xl mb-4 ml-4
+}
 :root {
 
 }
