--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
 h1 {
-    @apply text-4xl mb-12 ml-16
+    @apply text-4xl mb-12 ml-16 max-lg:text-xl
 }
 h2 {
    @apply text-2xl mb-8
 }
 h3 {
-    @apply text-2xl mb-4 font-semibold
+    @apply text-2xl mb-4 font-semibold max-lg:text-sm
 }
 :root {
 
@@ -38,7 +42,108 @@ h3 {
 }
 
 
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+      Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  }
+  
+  body,
+  html {
+    height: 100%;
+    margin: 0;
+  }
+  
+  .modal-backdrop {
     
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .modal {
+    width: 80%;
+    max-width: 1200px;
+    height: auto;
+    max-height: 800px;
+    border: none;
+    border-radius: 6px;
+    background-color: white;
+    padding: 20px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    font-weight: 500;
+  }
+  
+  .close-button {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 48px;
+    height: 48px;
+    background-color: transparent;
+    border: none;
+    border-radius: 15px; /* Circular shape */
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 24px; /* Adjust font size as needed */
+  }
+  
+  .close-button:hover {
+    background-color: #eee;
+  }
+  
+  .close-button:after {
+    content: 'x';
+    color: black;
+  }
+  
+  .cards-container {
+    display: grid;
+    grid-template-columns: repeat(3, 200px);
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+  }
+  
+  .card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    background-color: #eee;
+    border-radius: 8px;
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+    font-weight: 500;
+    max-width: 200px;
+  }
+  
+  @media (max-width: 600px) {
+    .cards-container {
+      grid-template-columns: 1fr;
+      justify-items: center;
+    }
+  
+    .card {
+      width: 80%;
+    }
+  }
+      
 
 
 
