--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-
-
+html {
+  font-family: "Golos Text", serif;
+  font-weight: 400;
+}
 h1 {
-    @apply text-4xl mb-12 ml-16 max-lg:text-xl
+    @apply text-4xl mb-12 ml-16 max-lg:text-xl font-bold
 }
 h2 {
    @apply text-2xl mb-8
